<package>
  <name>homer_mapping</name>
  <version>1.0.0</version>
  <description>

     homer_mapping

  </description>
  <maintainer email="vseib@uni-koblenz.de">Viktor Seib</maintainer>
  <author email="mknauf@uni-koblenz.de">Malte Knauf</author>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>homer_nav_libs</build_depend>

  <build_depend>homer_mapnav_msgs</build_depend>
  <build_depend>homer_tools</build_depend>
 

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roslib</run_depend>  
  <run_depend>homer_nav_libs</run_depend>

  <run_depend>homer_mapnav_msgs</run_depend>
  <run_depend>homer_tools</run_depend>
</package>
