<package>
  <name>homer_mapping</name>
  <version>0.1.18</version>
  <description>

     homer_mapping

  </description>
  <maintainer email="fpolster@uni-koblenz.de">Florian Polster</maintainer>
  <maintainer email="raphael@uni-koblenz.de">Raphael Memmesheimer</maintainer>

  <author email="mknauf@uni-koblenz.de">Malte Knauf</author>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>homer_nav_libs</build_depend>
  <build_depend>homer_mapnav_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-gui</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>qtbase5-dev</build_depend>
 

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roslib</run_depend>  
  <run_depend>homer_nav_libs</run_depend>
  <run_depend>homer_mapnav_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>

</package>
